feat: 이슈 조회 시에 부가 정보 표시
- 작성자 이름 표시
- 참여자 정보 표시
- 참여자 클릭 시 해당 참여자로 검색 조건 변경
