# apps/spring-api/src/main/java/com/codesquad/issueTracker/issue/IssueResponseMapper.java
@@ -5,6 +5,8 @@ import com.codesquad.issueTracker.label.Label;
 import com.codesquad.issueTracker.label.dto.LabelSummaryResponse;
 import com.codesquad.issueTracker.milestone.Milestone;
 import com.codesquad.issueTracker.milestone.dto.MilestoneReferenceResponse;
+import com.codesquad.issueTracker.user.User;
+import com.codesquad.issueTracker.user.dto.UserInfoResponse;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -13,8 +15,9 @@ import org.springframework.stereotype.Component;
 
 @Component
 public class IssueResponseMapper {
-    public IssueSummaryResponse toResponse(Issue issue, Map<Long, Label> labelMap,
-                                           Map<Long, Milestone> milestoneMap
+    public IssueSummaryResponse toResponse(
+            Issue issue, Map<Long, User> authorMap, Map<Long, Label> labelMap,
+            Map<Long, Milestone> milestoneMap, Map<Long, User> assigneeMap
     ) {
         List<LabelSummaryResponse> labels = issue.getLabels().stream()
                 .map(IssueLabel::labelId)
@@ -23,11 +26,21 @@ public class IssueResponseMapper {
                 .map(LabelSummaryResponse::from)
                 .toList();
 
+        List<UserInfoResponse> assignees = issue.getUsers().stream()
+                .map(IssueUser::userId)
+                .map(assigneeMap::get)
+                .filter(Objects::nonNull)
+                .map(UserInfoResponse::from)
+                .toList();
+
+
         MilestoneReferenceResponse milestone = Optional.ofNullable(issue.getMilestoneId())
                 .map(milestoneMap::get)
                 .map(MilestoneReferenceResponse::from)
                 .orElse(null);
 
-        return IssueSummaryResponse.from(issue, labels, milestone);
+        String authorName = authorMap.get(issue.getAuthorId()).getUsername();
+
+        return IssueSummaryResponse.from(issue, authorName, labels, milestone, assignees);
     }
 }
